--- a/src/Features/Form/CheckboxCollection/CheckboxCollection.css
+++ b/src/Features/Form/CheckboxCollection/CheckboxCollection.css
@@ -1,75 +1,5 @@
- /* :root {
-  --Checked-Green: #27AE60;
-  --Hover-Green: #35E07D;
-}
-
-
-.form-step label {
-  text-transform: uppercase;
-  color: var(--White);
-}
-
 .options-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 500px;
 }
-
-.options-container input[type='checkbox']{
-  cursor: pointer;
-}
-
-.options-container label input[type="checkbox"] {
-  opacity: 0;
-  position: absolute;
-}
-
-.options-container label span {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  text-transform:none
-}
-   */
-/* Style the span to look like a custom checkbox or button */
-/* .options-container label span::before {
-  content: "";
-  width: 1em;
-  height: 1em;
-  border: solid var(--Black);
-  border-radius: .15em;
-  margin-right: .5em;
-}
-
-.options-container label span:hover::before, 
-.options-container input[type='checkbox']:hover + label span::before {
-  background-color: var(--Hover-Green);
-}
-
-
-label input[type='checkbox']:focus + span::before  {
-  box-shadow: 0 0 20px var(--Black);
-}
-
-label input[type='checkbox']:disabled + span::before ,
-.options-container input[type='checkbox']:disabled {
-  color: #aaa;
-  cursor: default;
-}
-
-label input[type='checkbox']:checked + span::before  {
-  content: '\002714';
-  background-color: var(--Checked-Green);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--White)
-}
-
-.options-container input[type='checkbox']:disabled + label span::before {
-  background-color: #ccc;
-  border-color: #999;
-} */
-
-/* transition  */
