--- a/src/Features/Form/Form.css
+++ b/src/Features/Form/Form.css
@@ -5,13 +5,13 @@ form {
 .form {
 	width: 500px;
 	max-width: 32rem;
-	margin-top: 1.5rem;
+	margin: 1.5rem auto;
 	padding: 1.5rem;
 	overflow: hidden; /* important for max-height animations */
 	backdrop-filter: blur(5px);
 	background: var(--background-form);
 	position: relative;
-	height: clamp(400px, 50vh, 900px);
+	height: 100%;
 	border-radius: 16px;
 	box-shadow: 10px 11px 30px 12px rgba(0, 0, 0, 0.875);
 	border: solid white;
@@ -34,8 +34,8 @@ form {
 	paint-order: stroke;
 }
 .form-controls {
-	display: flex; /* flex */
-	justify-content: space-around; /* justify-between */
+	display: flex; 
+	justify-content: space-around;
 	margin-top: 1rem;
 }
 .next-button {
